--- a/client/src/components/views/Header/Header.scss
+++ b/client/src/components/views/Header/Header.scss
@@ -31,105 +31,24 @@
       display: flex;
       align-items: center;
       li {
+        display: flex;
+        align-items: center;
         font-weight: bold;
         font-size: 14px;
         padding: 8px 12px;
         cursor: pointer;
-        transition: 300ms ease;
 
-        .header_icon {
-          position: relative;
-          bottom: 0;
-          font-size: 20px;
-          z-index: 20;
-
-          path {
-            color: $violetColor;
-          }
-        }
-
-        .heaer_icon_spot {
-          position: relative;
-          top: 4px;
-          right: -10px;
-          width: 8px;
-          height: 8px;
-          background-color: $choralColor;
-          border-radius: 50%;
-          z-index: 5;
+        .icon_scrap {
+          margin-right: 3px;
         }
 
         &:hover {
           color: $choralColor;
+          .icon_scrap path {
+            color: $choralColor;
+          }
         }
-      }
-
-      .header_user {
-        pointer-events: none;
       }
     }
   }
 }
-
-.modal_alarm_container {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 15;
-
-  .modal_alarm {
-    position: absolute;
-    width: 500px;
-    max-height: 300px;
-    overflow: auto;
-    background-color: $lilacColor;
-    top: 60px;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    padding: 1rem 1.5rem;
-    color: $categoryTextColor;
-
-    .modal_alarm_list {
-      display: flex;
-      flex-direction: column;
-      margin-top: 10px;
-
-      li {
-        font-size: 14px;
-        padding: 1rem 0;
-        border-bottom: 1px solid $categoryTextColor;
-        cursor: pointer;
-
-        span {
-          font-weight: bold;
-        }
-        &:hover {
-          opacity: 0.7;
-        }
-      }
-    } // .modal_alarm_list
-
-    span {
-      padding: 3rem 0;
-      align-self: center;
-    }
-
-    &::-webkit-scrollbar {
-      width: 12px;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: $violetColor;
-      border-radius: 10px;
-      background-clip: padding-box;
-      border: 2px solid transparent;
-    }
-    &::-webkit-scrollbar-track {
-      background-color: $lilacColor;
-      border-radius: 10px;
-    }
-  } // .modal_alarm
-} //.modal_alarm_container
