--- a/client/src/components/common/news.scss
+++ b/client/src/components/common/news.scss
@@ -81,6 +81,7 @@
       li {
         display: flex;
         flex-direction: column;
+        margin: 3px 0;
 
         .article_main {
           display: flex;
@@ -89,7 +90,6 @@
           padding: 10px 1rem;
           background-color: white;
           border-radius: 10px;
-          margin: 3px 0;
 
           div {
             width: 90%;
@@ -99,6 +99,7 @@
 
           .article_scrap {
             cursor: pointer;
+            font-size: 1.25rem;
             path {
               color: $violetColor;
             }
@@ -113,7 +114,7 @@
         .article_sub {
           position: relative;
           display: none;
-          margin-top: -8px;
+          margin-top: -5px;
           flex-direction: column;
           background-color: white;
           border-radius: 0 0 10px 10px;
@@ -123,9 +124,14 @@
         } //article_sub
 
         &:hover {
+          border-left: 5px solid $choralColor;
+          .article_main {
+            border-radius: 0 10px 10px 0;
+          }
           .article_sub {
             display: block;
             animation: fade-in 1.5s ease forwards;
+            border-radius: 0 0 10px 0;
           }
         }
       } //articles li
