:sparkles: :lipstick: Banner Component News Ticker 구현 및 스타일링 :)

--- a/client/src/components/views/LandingPage/LandingPage.scss
+++ b/client/src/components/views/LandingPage/LandingPage.scss
@@ -51,15 +51,21 @@
       }
     }
 
-    ul {
-      padding-top: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .rolling {
+      height: 50px;
+      overflow: hidden;
 
-      li {
-        color: white;
-        padding: 5px 0;
+      ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        li {
+          color: white;
+          padding: 5px 0;
+          height: 50px;
+          line-height: 50px;
+        }
       }
     }
   }
