--- a/client/src/components/common/news.scss
+++ b/client/src/components/common/news.scss
@@ -82,6 +82,7 @@
         display: flex;
         flex-direction: column;
         margin: 3px 0;
+        border-radius: 5px;
 
         .article_main {
           display: flex;
@@ -99,8 +100,12 @@
           .article_scrap {
             cursor: pointer;
             font-size: 1.25rem;
+            transition: 300ms ease;
             path {
               color: $violetColor;
+            }
+            &:hover {
+              transform: scale(1.2);
             }
           }
         } //article_main
