--- a/client/src/components/common/common.scss
+++ b/client/src/components/common/common.scss
@@ -20,14 +20,16 @@
   .modal_scrap {
     position: relative;
     width: 60%;
+    height: 80%;
     background-color: white;
-    top: 30%;
+    top: 10%;
     display: flex;
     flex-direction: column;
     border: 2px solid $violetColor;
     border-radius: 10px;
     padding: 1rem 1.5rem;
     margin: 0 auto;
+    overflow: auto;
 
     .modal_head {
       width: 100%;
@@ -100,6 +102,19 @@
         }
       } //articles li
     } //articles
+
+    &::-webkit-scrollbar {
+      width: 12px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: $violetColor;
+      border-radius: 10px;
+      background-clip: padding-box;
+      border: 2px solid transparent;
+    }
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+    }
   }
 } // modal_mypage_confirm
 
