--- a/client/src/components/common/news.scss
+++ b/client/src/components/common/news.scss
@@ -6,134 +6,134 @@
   justify-content: center;
   padding: 5rem 0;
   height: 100vh;
+} //news
 
-  .news_category {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-right: 3.5rem;
+.news_category {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 3.5rem;
 
-    .category {
-      width: 185px;
-      font-size: 20px;
-      font-weight: bold;
-      padding: 6px 8px;
-      color: $categoryTextColor;
-      cursor: pointer;
-    }
-
-    .category.active {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: white;
-      background-color: $violetColor;
-      border-radius: 10px;
-      .category_icon path {
-        color: white;
-      }
-    }
-  } //news_category
-
-  .article_list {
-    display: flex;
-    flex-direction: column;
-    flex: 2;
+  .category {
+    width: 185px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 6px 8px;
     color: $categoryTextColor;
+    cursor: pointer;
+  }
 
-    .category_title {
-      display: flex;
-      align-items: center;
+  .category.active {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    background-color: $violetColor;
+    border-radius: 10px;
+    .category_icon path {
+      color: white;
+    }
+  }
+} //news_category
 
-      .category_name {
-        font-weight: bold;
-        font-size: 30px;
-        padding-right: 10px;
+.article_list {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  color: $categoryTextColor;
+
+  .category_title {
+    display: flex;
+    align-items: center;
+
+    .category_name {
+      font-weight: bold;
+      font-size: 30px;
+      padding-right: 10px;
+    }
+
+    .article_list_guide {
+      font-size: 28px;
+      cursor: pointer;
+
+      path {
+        color: $lightGray;
       }
 
-      .article_list_guide {
-        font-size: 28px;
-        cursor: pointer;
-
-        path {
-          color: $lightGray;
-        }
-
-        &:hover {
-          .pop_confirm {
-            visibility: visible;
-            animation: fade-in 0.5s;
-          }
+      &:hover {
+        .pop_confirm {
+          visibility: visible;
+          animation: fade-in 0.5s;
         }
       }
     }
+  } //category_title
 
-    .articles {
+  .articles {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    padding: 1.5rem;
+    width: 90%;
+    background-color: $lilacColor;
+    border-radius: 10px;
+
+    li {
       display: flex;
       flex-direction: column;
-      margin-top: 2rem;
-      padding: 1.5rem;
-      width: 90%;
-      background-color: $lilacColor;
-      border-radius: 10px;
+      margin: 3px 0;
+      border-radius: 5px;
 
-      li {
+      .article_main {
         display: flex;
-        flex-direction: column;
-        margin: 3px 0;
-        border-radius: 5px;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 1rem;
+        background-color: white;
+        border-radius: 10px;
 
-        .article_main {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          padding: 10px 1rem;
-          background-color: white;
-          border-radius: 10px;
+        .article_title {
+          width: 90%;
+          font-weight: 500;
+        }
 
-          .article_title {
-            width: 90%;
-            font-weight: 500;
+        .article_scrap {
+          cursor: pointer;
+          font-size: 1.25rem;
+          transition: 300ms ease;
+          path {
+            color: $violetColor;
           }
-
-          .article_scrap {
-            cursor: pointer;
-            font-size: 1.25rem;
-            transition: 300ms ease;
-            path {
-              color: $violetColor;
-            }
-            &:hover {
-              transform: scale(1.2);
-            }
-          }
-        } //article_main
-
-        .article_sub {
-          position: relative;
-          display: none;
-          margin-top: -5px;
-          flex-direction: column;
-          background-color: white;
-          border-radius: 0 0 10px 10px;
-          animation: fade-out 0.5s ease forwards;
-          padding: 1rem 2rem;
-          font-size: 13px;
-        } //article_sub
-
-        &:hover {
-          border-left: 5px solid $choralColor;
-          .article_main {
-            border-radius: 0 10px 10px 0;
-          }
-          .article_sub {
-            display: block;
-            animation: fade-in 1.5s ease forwards;
-            border-radius: 0 0 10px 0;
+          &:hover {
+            transform: scale(1.2);
           }
         }
-      } //articles li
-    } //articles
-  } //article_list
-} //news
+      } //article_main
+
+      .article_sub {
+        position: relative;
+        display: none;
+        margin-top: -5px;
+        flex-direction: column;
+        background-color: white;
+        border-radius: 0 0 10px 10px;
+        animation: fade-out 0.5s ease forwards;
+        padding: 1rem 2rem;
+        font-size: 13px;
+      } //article_sub
+
+      &:hover {
+        border-left: 5px solid $choralColor;
+        .article_main {
+          border-radius: 0 10px 10px 0;
+        }
+        .article_sub {
+          display: block;
+          animation: fade-in 1.5s ease forwards;
+          border-radius: 0 0 10px 0;
+        }
+      }
+    } //articles li
+  } //articles
+} //article_list
