--- a/client/src/components/views/Header/Header.scss
+++ b/client/src/components/views/Header/Header.scss
@@ -52,3 +52,15 @@
     }
   }
 }
+
+@media screen and (max-width: 778px) {
+  .header {
+    padding: 1rem 2.5rem;
+  }
+}
+
+@media screen and (max-width: 778px) {
+  .header {
+    padding: 1rem 1.25rem;
+  }
+}
