--- a/src/components/common/news.scss
+++ b/src/components/common/news.scss
@@ -78,7 +78,7 @@
     padding: 1.5rem;
     background-color: $lilacColor;
     border-radius: 10px;
-    height: 300px;
+    height: 500px;
     overflow: auto;
 
     li {
@@ -122,17 +122,23 @@
         border-radius: 0 0 10px 10px;
         padding: 1rem 2rem;
         font-size: 13px;
+        // height: 100px;
+        // overflow: auto;
+        // &::-webkit-scrollbar {
+        //   display: none;
+        // }
       } //article_sub
 
       &:hover {
         border-left: 5px solid $choralColor;
+        border-right: 5px solid $choralColor;
         .article_main {
-          border-radius: 0 10px 10px 0;
+          border-radius: 0 0 0 0;
         }
         .article_sub {
           display: block;
           animation: fade-in 1.5s ease forwards;
-          border-radius: 0 0 10px 0;
+          border-radius: 0 0 0 0;
         }
       }
     } //articles li
